--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>My First Website</title>
+        <meta name="author" content="Cliff Games">
+        <title>CG / New Web Developer</title>
     </head>
     <body>
-       Hello, World, and welcome to my first website!
+       <p>Hello, World, and welcome to my first website!</p>
+        <p>I will try my hardest to make a great website</p>
     </body>
 </html>
